--- a/sections/custom-liquid.liquid
+++ b/sections/custom-liquid.liquid
@@ -79,6 +79,7 @@
   font-weight: 700;
 }
 {%- endstyle -%}
+{% if product.metafields.custom.product_information != blank or product.metafields.custom.specifications != blank %}
 <div class="color-{{ section.settings.color_scheme }} gradient">
   <div class="section-{{ section.id }}-padding">
     {% comment %} {{ section.settings.custom_liquid }} {% endcomment %}
@@ -88,24 +89,31 @@
       <input class="radio" id="two" name="group" type="radio">
       <input class="radio" id="three" name="group" type="radio">
       <div class="tabs">
+        {% if product.metafields.custom.product_information != blank %}
       <label class="tab" id="one-tab" for="one">Productinformatie</label>
+        {% endif %}
+        {% if product.metafields.custom.specifications != blank %}
       <label class="tab" id="two-tab" for="two">Specificaties</label>
+        {% endif %}
     
         </div>
       <div class="panels">
-      <div class="panel" id="one-panel">
-        <div class="panel-title">Ergonomisch en stijlvol</div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-      </div>
-      <div class="panel" id="two-panel">
-        <div class="panel-title"> Product specificaties</div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-      </div>
+        {% if product.metafields.custom.product_information != blank %}
+          <div class="panel" id="one-panel">
+            {{ product.metafields.custom.product_information|newline_to_br }}
+          </div>
+        {% endif %}
+        {% if product.metafields.custom.specifications != blank %}
+          <div class="panel" id="two-panel">
+            {{ product.metafields.custom.specifications|newline_to_br }}
+          </div>
+        {% endif %}
       </div>
     </div>
 
   </div>
 </div>
+{% endif %}
 
 {% schema %}
 {
