add 2 columns on mobile and add border-radius to multicolumn component

--- a/sections/multicolumn.liquid
+++ b/sections/multicolumn.liquid
@@ -18,6 +18,7 @@
   .multicolumn-card__info {
     background-color:#F0F0EA ;
     text-align: left;
+    border-radius: var(--text-boxes-radius); 
   }
 
   @media screen and (max-width: 750px) {
